Fix align link and slide

--- a/docs/_sass/_datastory.scss
+++ b/docs/_sass/_datastory.scss
@@ -3,6 +3,9 @@
   .datastory-item {
     right: 0;
     margin: 0 0 15px;
+    .datastory-link.col-lg-4.col-12.text-center {
+        padding: 0px !important;
+    }
     .datastory-link {
       position: relative;
       display: inline-block;
